--- a/docs/dissertation/refs.bib
+++ b/docs/dissertation/refs.bib
@@ -199,3 +199,25 @@
   year={2001},
   organization={IEEE}
 }
+
+@misc{kaliski2000rfc,
+  title={{RFC 2898; PKCS\# 5: Password-Based Cryptography Specification Version 2.0}},
+  author={Kaliski, Burt},
+  year={2000}
+}
+
+@misc{googletest,
+  author = {Google},
+  title = {Google Test},
+  year = {2016},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/google/googletest}}
+}
+
+@article{dworkin2001nist,
+  title={NIST SP 800-38A: Recommendation for Block Cipher Modes of Operation},
+  author={Dworkin, Morris},
+  journal={National Institute of Standards and Technology (NIST), USA},
+  year={2001}
+}
