--- a/docs/dissertation/refs.bib
+++ b/docs/dissertation/refs.bib
@@ -151,6 +151,13 @@
     note="University of Cambridge Part IA CST course notes"
 }
 
+@misc{softeng-notes,
+    title="{Software Engineering}",
+    author="Anderson, Ross J",
+    year="2015",
+    note="University of Cambridge Part IB CST course notes"
+}
+
 @inproceedings{westfeld1999attacks,
   title={Attacks on steganographic systems},
   author={Westfeld, Andreas and Pfitzmann, Andreas},
@@ -163,7 +170,7 @@
 @inproceedings{tourapis2004direct,
   title="Direct macroblock coding for predictive {(P)} pictures in the {H.264} standard",
   author={Tourapis, Alexis M and Wu, Feng and Li, Shipeng},
-  booktitle={Electronic Imaging 2004},
+  booktitle={Electronic Imaging},
   pages={364--371},
   year={2004},
   organization={International Society for Optics and Photonics}
